--- a/index.html
+++ b/index.html
@@ -15,7 +15,53 @@
         </ul>
     </div>
     <div class="body">
-    <div class="content">This website is awesome</div>
+        <div class="content1">
+            <div class="content1-right">
+                <div class="main-title">This website is awesome</div>
+                <div class="subtext">This website has some subtext that 
+                    goes here under the main title. It's smaller font and the 
+                    color is lower contrast
+                </div>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="image1"><div>this is a placeholder for an image</div></div>
+        </div>
+        <div class="content2">
+            <div class="title2">Some random information.</div>
+            <div class="image-space">
+                <div class="cuadro"></div>
+                <di>this is some subtext under an illustration or image</di>
+            </div>
+            <div class="image-space">
+                <div class="cuadro"></div>
+                <di>this is some subtext under an illustration or image</di>
+            </div>
+            <div class="image-space">
+                <div class="cuadro"></div>
+                <di>this is some subtext under an illustration or image</di>
+            </div>
+            <div class="image-space">
+                <div class="cuadro"></div>
+                <di>this is some subtext under an illustration or image</di>
+            </div>
+        </div>
+        <div class="content3">
+            <div class="quote">This is an inspiring quote, or a testimoial from
+            a customer. Maybe it's just filling up space, or maybe people will
+            actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="author">-Thor, God of Thunder</div>    
+        </div>
+        <div class="content4">
+            <div class="cuadro">
+                <div class="right"></div>
+                <div>Call to action! It's time!</div>
+                <div class="small-text">Sign up for our product by clicking that
+                    button right over there!
+                </div>
+                <button class="left">Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
