--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
         </div>
         <div class="content2">
             <div class="title2">Some random information.</div>
-            <div class="image-space">
-                <div class="cuadro"></div>
-                <di>this is some subtext under an illustration or image</di>
-            </div>
-            <div class="image-space">
-                <div class="cuadro"></div>
-                <di>this is some subtext under an illustration or image</di>
-            </div>
-            <div class="image-space">
-                <div class="cuadro"></div>
-                <di>this is some subtext under an illustration or image</di>
-            </div>
-            <div class="image-space">
-                <div class="cuadro"></div>
-                <di>this is some subtext under an illustration or image</di>
+            <div class="cuadros">
+                <div class="image-space">
+                    <div class="cuadro"></div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-space">
+                    <div class="cuadro"></div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-space">
+                    <div class="cuadro"></div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-space">
+                    <div class="cuadro"></div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
         <div class="content3">
@@ -53,11 +55,12 @@
             <div class="author">-Thor, God of Thunder</div>    
         </div>
         <div class="content4">
-            <div class="cuadro">
-                <div class="right"></div>
-                <div>Call to action! It's time!</div>
-                <div class="small-text">Sign up for our product by clicking that
-                    button right over there!
+            <div class="rectangulo">
+                <div class="right">
+                    <div class="title4">Call to action! It's time!</div>
+                    <div class="small-text">Sign up for our product by clicking that
+                        button right over there!
+                    </div>
                 </div>
                 <button class="left">Sign up</button>
             </div>
