--- a/index.html
+++ b/index.html
@@ -2,70 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Christmas Gourmet</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="header">
-        <div class="header-logo">Header Logo</div>
+        <div class="header-logo">
+            <a>Christmas </a><img class="logo" src="images/christmas-tree-svgrepo-com.svg"></i><a> Gourmet</a>
+        </div>
         <ul class="header-links">
-            <li><a href="google.com">header link one</a></li>
-            <li><a href="google.com">header link two</a></li>
-            <li><a href="google.com">header link three</a></li>
+            <li><a href="google.com">Main Course</a></li>
+            <li><a href="google.com">Baked Goods</a></li>
+            <li><a href="google.com">Desserts</a></li>
         </ul>
     </div>
     <div class="body">
-        <div class="content1">
-            <div class="content1-right">
-                <div class="main-title">This website is awesome</div>
-                <div class="subtext">This website has some subtext that 
-                    goes here under the main title. It's smaller font and the 
-                    color is lower contrast
+        <div class="initial-content">
+            <div class="content-right">
+                <div class="main-title">All the recipes you need for Christmas!</div>
+                <div class="subtext">Explore the magic of Christmas through mouthwatering dishes that will 
+                    make your celebrations truly special. Let the aroma of cinnamon, nutmeg, 
+                    and all things festive fill your kitchen as you embark on a culinary journey of holiday cheer.
                 </div>
                 <button class="sign-up">Sign up</button>
             </div>
-            <div class="image1"><div>this is a placeholder for an image</div></div>
+            <div class="image-table">
+                <img src="images/Christmas-dinner.jpg">
+            </div>
         </div>
         <div class="content2">
-            <div class="title2">Some random information.</div>
+            <div class="title2">Featured recipes</div>
             <div class="cuadros">
                 <div class="image-space">
-                    <div class="cuadro"></div>
-                    <div class="text2">this is some subtext under an illustration or image</div>
+                    <img class="cuadro" src="images/Gingerbread-Cookies.jpg">
+                    <div class="text2">Gingerbread Cookies</div>
                 </div>
                 <div class="image-space">
-                    <div class="cuadro"></div>
-                    <div class="text2">this is some subtext under an illustration or image</div>
+                    <img class="cuadro" src="images/Roast_Turkey.png">
+                    <div class="text2">Roast Turkey</div>
                 </div>
                 <div class="image-space">
-                    <div class="cuadro"></div>
-                    <div class="text2">this is some subtext under an illustration or image</div>
+                    <img class="cuadro" src="images/Panettone.jpeg">
+                    <div class="text2">Panettone</div>
                 </div>
                 <div class="image-space">
-                    <div class="cuadro"></div>
-                    <div class="text2">this is some subtext under an illustration or image</div>
+                    <img class="cuadro" src="images/Yule_Log.jpg">
+                    <div class="text2">Bûche de Noël (Yule Log Cake)</div>
                 </div>
             </div>
         </div>
         <div class="content3">
-            <div class="quote">This is an inspiring quote, or a testimoial from
-            a customer. Maybe it's just filling up space, or maybe people will
-            actually read it. Who knows? All I know is that it looks nice.
+            <div class="quote">“Cooking demands attention, patience, and above all, 
+                a respect for the gifts of the earth. It is a form of worship, 
+                a way of giving thanks.”
             </div>
-            <div class="author">-Thor, God of Thunder</div>    
+            <div class="author">-Judith B. Jones</div>    
         </div>
         <div class="content4">
             <div class="rectangulo">
                 <div class="right">
-                    <div class="title4">Call to action! It's time!</div>
-                    <div class="small-text">Sign up for our product by clicking that
-                        button right over there!
+                    <div class="title4">Join the Festive Feast!</div>
+                    <div class="small-text">Indulge in the magic of the season with our Christmas Recipes community!
+                         Unleash your inner chef and create mouthwatering holiday delights that will 
+                         dazzle your family and friends.
                     </div>
                 </div>
                 <button class="left">Sign up</button>
             </div>
         </div>
     </div>
-    <div class="footer">Copyright © The Odin Project 2021</div>
+    <div class="footer">Copyright © The Odin Project 2023</div>
 </body>
 </html>
