--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="body">
         <div class="initial-content">
-            <div class="content-right">
+            <div class="content-left">
                 <div class="main-title">All the recipes you need for Christmas!</div>
                 <div class="subtext">Explore the magic of Christmas through mouthwatering dishes that will 
                     make your celebrations truly special. Let the aroma of cinnamon, nutmeg, 
@@ -26,36 +26,36 @@
                 </div>
                 <button class="sign-up">Sign up</button>
             </div>
-            <div class="image-table">
-                <img src="images/Christmas-dinner.jpg">
+            <div class="content-right">
+
             </div>
         </div>
-        <div class="content2">
-            <div class="title2">Featured recipes</div>
-            <div class="cuadros">
+        <div class="content">
+            <div class="subtitle">Featured recipes</div>
+            <div class="boxes">
                 <div class="image-space">
-                    <img class="cuadro" src="images/Gingerbread-Cookies.jpg">
-                    <div class="text2">Gingerbread Cookies</div>
+                    <img class="box" src="images/Gingerbread-Cookies.jpg">
+                    <p class="text">Gingerbread Cookies</p>
                 </div>
                 <div class="image-space">
-                    <img class="cuadro" src="images/Roast_Turkey.png">
-                    <div class="text2">Roast Turkey</div>
+                    <img class="box" src="images/Roast_Turkey.png">
+                    <p class="text">Roast Turkey</p>
                 </div>
                 <div class="image-space">
-                    <img class="cuadro" src="images/Panettone.jpeg">
-                    <div class="text2">Panettone</div>
+                    <img class="box" src="images/Panettone.jpeg">
+                    <p class="text">Panettone</p>
                 </div>
                 <div class="image-space">
-                    <img class="cuadro" src="images/Yule_Log.jpg">
-                    <div class="text2">Bûche de Noël (Yule Log Cake)</div>
+                    <img class="box" src="images/Yule_Log.jpg">
+                    <p class="text">Bûche de Noël (Yule Log Cake)</p>
                 </div>
             </div>
         </div>
         <div class="content3">
-            <div class="quote">“Cooking demands attention, patience, and above all, 
+            <p class="quote">“Cooking demands attention, patience, and above all, 
                 a respect for the gifts of the earth. It is a form of worship, 
                 a way of giving thanks.”
-            </div>
+            </p>
             <div class="author">-Judith B. Jones</div>    
         </div>
         <div class="content4">
